# codewars-exercises

./: Program.cs  README.md  codewars-exercises.csproj  pyproject.toml
exercises/: HumanReadableTime.cs  SplitStrings.cs  ascii_puzzle_tiles.py  ascii_puzzle_tiles_test.py
